force-app/main/default/objects/Activity/fields/Created_by_SCC__c.field-meta.xml
<CustomField>
    <fullName>Created_by_SCC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created by SCC</label>
    <type>Checkbox</type>
</CustomField>