force-app/main/default/objects/Activity/fields/Risk_Level__c.field-meta.xml
<CustomField>
    <fullName>Risk_Level__c</fullName>
    <label>Risk Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
                <color>#419249</color>
                <label>Low</label>
            </value>
            <value>
                <fullName>Medium</fullName>
                <color>#F3D904</color>
                <label>Medium</label>
            </value>
            <value>
                <fullName>High</fullName>
                <color>#A53711</color>
                <label>High</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>