force-app/main/default/objects/Activity/fields/SCC_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>SCC_Sent_Date__c</fullName>
    <description>Used for Smartcloud Connect.</description>
    <label>SCC Sent Date</label>
    <type>DateTime</type>
</CustomField>